--- a/index.html
+++ b/index.html
@@ -682,7 +682,7 @@
 
                                         <div class="col-12">
                                             <div class="form-floating font-poppins">
-                                                <select class="form-select" id="package" name="package" placeholder="Which service are you interested in?" required>
+                                                <select class="form-select" id="package" name="package" placeholder="Interested in which service?" required>
                                                     <option value="" selected disabled>Select a package</option>
                                                     <option value="All format video">All format video</option>
                                                     <option value="AI Promo Campaigns">AI Promo Campaigns</option>
@@ -697,7 +697,7 @@
                                             <div class="col-12">
                                                 <div class="form-floating font-poppins">
                                                     <textarea class="form-control" id="message" name="message"
-                                                        placeholder="Tell us about your product / service and any
+                                                        placeholder="Tell us about your product / service or any
                                                         specific goals you have for this project"
                                                         style="height: 150px" required></textarea>
                                                     <!-- <label for="message">Tell us about your product / service and any
