--- a/index.html
+++ b/index.html
@@ -594,10 +594,10 @@
                                         Reels/Shorts</p>
                                     <p class="mb-2"><i class="fa fa-check text-primary me-2"></i>YouTube
                                         Long-form</p>
-                                    <p class="mb-2"><i class="fa fa-check text-primary me-2"></i>Corporate
+                                    <!-- <p class="mb-2"><i class="fa fa-check text-primary me-2"></i>Corporate
                                         & Podcasts</p>
                                     <p class="mb-2"><i class="fa fa-check text-primary me-2"></i>Sound
-                                        Design & Mix</p>
+                                        Design & Mix</p> -->
                                 </div>
                                 <div class="text-center mt-auto font-montserrat">
                                     <a href="#contact" class="btn bg-primary text-white py-2 px-4 rounded-pill"
@@ -645,10 +645,10 @@
                                     <p class="mb-2"><i class="fa fa-check text-primary me-2"></i>Ad Creatives (1:1 &
                                         4:5)</p>
                                     <p class="mb-2"><i class="fa fa-check text-primary me-2"></i>YouTube Thumbnails</p>
-                                    <p class="mb-2"><i class="fa fa-check text-primary me-2"></i>Grid-Optimized Reel
+                                    <!-- <p class="mb-2"><i class="fa fa-check text-primary me-2"></i>Grid-Optimized Reel
                                         Covers</p>
                                     <p class="mb-2"><i class="fa fa-check text-primary me-2"></i>High-Conversion
-                                        Carousels</p>
+                                        Carousels</p> -->
                                 </div>
                                 <div class="text-center mt-auto font-montserrat">
                                     <a href="#contact" class="btn bg-primary text-white py-2 px-4 rounded-pill">Get
